Closed Bug 1836391 Opened 1 years ago Closed 1 years ago

Unified folders mode randomly shows and doesn't show chevrons for smart folder

Categories

(Thunderbird :: Folder and Message Lists, defect, P2)

Thunderbird 115

Tracking

(thunderbird_esr102 unaffected, thunderbird115 fixed)

RESOLVED FIXED
116 Branch
Tracking Status
thunderbird_esr102 --- unaffected
thunderbird115 --- fixed

People

(Reporter: aleca, Assigned: darktrojan)

References

(Blocks 1 open bug)

Details

(Keywords: regression, Whiteboard: [Supernova3p])

Attachments

(1 file)

STR:

  • Start in All folder modes
  • Activate Unified folder modes

See how the special folders all have the chevron even if you only have 1 account.

  • Restart Thunderbird

The special folders don't have the chevron.

Not severe but kinda annoying, and slightly related to bug 1832698 as the list is not populated on first select when the chevrons are visible.

Blocks: sn-folderpane
No longer blocks: sn-msglist
Keywords: regression
Version: unspecified → Thunderbird 115

I have a theory that if Unified is the first active mode, its init method could run before the account manager is ready and therefore the folders that should be displayed don't exist. If that's true then I think that calling something such as MailServices.accounts.allServers; at the top of the function would solve the problem. But it's only a theory, I've not managed to reproduce the bug yet.

If LoadVirtualFolders is called before the real folders properly exist, the missing folders are
removed from the virtual folder by ParseAndVerifyVirtualFolderScope and lost forever. This can be
difficult to reproduce as most real folders are brought into existence by earlier code, but it can
be seen in a new profile with only a local mail account and the unified folders mode enabled.

Assignee: nobody → geoff
Status: NEW → ASSIGNED
Target Milestone: --- → 116 Branch

Pushed by elizabeth@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/05f9f86d021e
Before loading virtual folders, ensure that all real folders exist. r=john.bieling

Status: ASSIGNED → RESOLVED
Closed: 1 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: