Bug 1836391 - Before loading virtual folders, ensure that all real folders exist. r=john.bieling

If `LoadVirtualFolders` is called before the real folders properly exist, the missing folders are
removed from the virtual folder by `ParseAndVerifyVirtualFolderScope` and lost forever. This can be
difficult to reproduce as most real folders are brought into existence by earlier code, but it can
be seen in a new profile with only a local mail account and the unified folders mode enabled.

Differential Revision: https://phabricator.services.mozilla.com/D180633

--HG--
extra : moz-landing-system : lando